# Langchain-Version-1.x.x-Course

./: .gitignore  pyproject.toml  test_imports.py
CH_1/: 3_llm_call_with_init_chat_model.py
CH_1-LLM_CALLS/: 1_llm_call.py  2_llm_call_with_streaming.py  3_llm_call_with_init_chat_model.py
CH_2/: 1_messages.py  3_chat_prompt_template.py
CH_2-MESSAGES/: 1_message_usage.py  2_message_using_text_prompt.py  3_message_using_message_prompt.py  4_message_using_multimodality.py
CH_2_MESSAGES/: 1_message_usage.py
CH_3/: structured_output_with_pydantic.py  structured_output_with_typed_dict.py
CH_3-PROMT_TEMPLATES/: 1_prompt_template.py  2_chat_prompt_template.py
CH_4/: 3_chain_with_runnable_sequence.py  4_chan_with_custom_runnable.py  6_chan_with_runnable_parallel.py
CH_4-STRUCTURED-OUTPUT/: 1_structured_output_with_typed_dict.py  2_structured_output_with_pydantic.py
CH_5/: 1_chain_pipe_operators.py  2_chain_with_output_parser.py  5_chan_with_typed_dict.py
CH_5-CHAINS/: 1_chain_pipe_operators.py  2_chain_with_output_parser.py  3_chain_with_runnable_sequence.py  4_chain_with_custom_runnable.py  5_chain_with_typed_dict.py  6_chain_with_runnable_parallel.py
CH_6-TOOLS/: 1_basic_tool_defination.py  2_tool_calling_with_right_check.py  3_tool_calling_with_web_search_api.py
CH_7-AGENTS/: 1_simple_agent_without_tool.py  2_simple_agent_with_tool copy.py  2_simple_agent_with_tool.py  3_simple_agent_with_tool_check.py  4_get_weather_agent.py  5_get_weather_agent_with_memory.py
CH_8-RAG/: config.py  ingest_cloud.py  main_rag.py  question_field.py  rag_chain.py  (+2 more)
