[project]
name = "langchain-version-1.x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "tavily-python>=0.7.20",
    "langchain-chroma>=0.1.0",
    "onnxruntime>=1.16.0,<1.20.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.7.2",
    "fastapi>=0.132.0",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
]
